samples/_failures_safe/1761284867_4e20ff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_09ed2dd9.c: In function ‘main’:
./samples/SAFE/__tmp_09ed2dd9.c:161:9: error: expected expression at end of input
  161 |         if (token.type ==
      |         ^~
./samples/SAFE/__tmp_09ed2dd9.c:161:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_09ed2dd9.c:161:9: error: expected declaration or statement at end of input
